--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -147,7 +147,7 @@ c. Run FFmpeg command directly on Terminal.app: <lt>ffmpeg -i /full/path/of/xxx.
 </video><br>
 <p> めぐる季節 come from the respected film <a href="https://www.imdb.com/title/tt0097814/" target="_blank">魔女の宅急便 (Kiki's Delivery Service) </a>, 1989.</p>
 
-<p>The above four music video were come from the respected Japanese animated fantasy films and all of them directed by respected Mr. 宮崎駿 (Miyazaki Hayao), and animated by respected Studio Ghibli. All music except "Arrietty's Song" were written by respected Mr. 久石譲 (Joe Hisaishi). They're made by LyricsMaker and LittleFox, and located here: <a href="https://github.com/chengdu/LittleFox" target="_blank">https://github.com/chengdu/LittleFox</a>. More video samples placed there with style samples as a reference. You can take a look there and then got the answer of such questions, "How to turn my favourite mp3 to video with lyrics sheet?", "How can I burn lyrics words into video?". You can produce music video that like karaoke video but without the traditional subtitle editor's boring works now.</p>
+<p>The above music videos come from the respected Japanese animated fantasy films and all of them directed by respected Mr. 宮崎駿 (Miyazaki Hayao), and animated by respected Studio Ghibli. All music except "Arrietty's Song" were written by respected Mr. 久石譲 (Joe Hisaishi). All of the samples were rapidly made by LyricsMaker and LittleFox in minutes, with the help of them, you can got the answer of such questions, "How to turn my favourite mp3 to video with lyrics sheet?", "How can I burn lyrics words into video?". You can make karaoke video but without the traditional subtitle editor's boring works, now.</p>
 
 <p class="green">My Video Now!</p>
 
