--- a/en/tungsyu.html
+++ b/en/tungsyu.html
@@ -30,7 +30,7 @@
         <p class="greenbig">Tungsyu, the Calendar of Yangtze River.</p>
     </div>
 
-<p>Tungsyu was developed with an ultra small lunar calendar engine especially designed for deeply embedded systems, it's only 72KB binary without any extra data and dependencies except C standard library. It was completely developed with ANSI C from scratch and can be compiled with C89 or C99. The engine is a full range calendar (means thousands of years) that can fast calulate julian calendar and gregorian calendar to lunar calendar or vice versa. It can be used in microprocessor based on embedded system and desktop apps. Please contact me if you're interested in to use it in your product. The following is a screenshot of the engine.</p>
+<p>Tungsyu was developed with an ultra small lunar calendar engine especially designed for deeply embedded systems, it's only 72KB binary without any extra data and dependencies except C standard library. It was completely developed with ANSI C from scratch and can be compiled with C89 or C99. The engine is a full range calendar (means thousands of years) that can fast calulate julian calendar and gregorian calendar to lunar calendar or vice versa. It can be used in microprocessor based on embedded system and desktop apps. Please contact us if you're interested in to use it in your product. The following is a screenshot of the engine.</p>
 <p><!--img src="../images/Tungsyu/lunar_calendar.png" class="screenshots"/-->
 <pre class="block">
  % ./calendar 202104
