--- a/en/guard.html
+++ b/en/guard.html
@@ -15,22 +15,7 @@
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <title>Guard7, the GUI frontend of GNU Privacy Guard for Mac OS X.</title>
-<link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<style type="text/css">
-/*
-.none {  padding:0;  margin: 0; }
-.fileicon { height:44px; width: auto; }
-.evil {color:#ff0000; }
-.dark {color:#333; }
-.warning { color: #ffc8c8; }
-.greenbig {color: #007f00;font-size:1.2em;font-weight: bold;}
-.tell { color:#000000; font-weight: bold; }
-.note { color:#f0f0f0; background:#007f00; border-radius: 4px; padding:2px 2px 2px 2px; }
-*/
-</style>
 </head>
 <body>
 
@@ -49,7 +34,7 @@
 <p><em>If you can't open the link above, please launch App Store and found Guard7 by searching. Please kindly donate the author by purchasing other apps developed by the author or commend this app on your blog or rate this app so that helping other people can more easily find it.</em></p>
 
 <h2>Why</h2>
-<p class="block">The most difference between "public key cryptography" and normal "password protected cryptography" is that the first approach don't ask you to distribute any password to anyone or any unsafe place, e.g. email, chat app, or internet. That is, you send an encrypted message or file to someone, but don't need send any password to him/her. And the most important point is, you need an encryption tool that has industrial strength to protect your confidential information.</p>
+<p class="block"><i>The most difference between "public key cryptography" and normal "password protected cryptography" is that the first approach don't ask you to distribute any password to anyone or any unsafe place, e.g. email, chat app, or internet. That is, you send an encrypted message or file to someone, but don't need send any password to him/her. And the most important point is, you need an encryption tool that has industrial strength to protect your confidential information.</i></p>
 
 
 <h2>General Features</h2>
@@ -113,9 +98,9 @@ If someone else has your public key, they can encrypt message with your public k
 
 <h2>File Types</h2>
 <ul>
-<li><img src="../images/guard/asc.png" class="fileicon" />: .asc files, key file or signed signature file.</li>
-<li><img src="../images/guard/gml.png" class="fileicon" />: .gml files, encrypted email message.</li>
-<li><img src="../images/guard/gpg.png" class="fileicon" />: .gpg files, encrypted and compressed File.</li>
+<li><img src="../images/guard/asc.png" class="icon" />: .asc files, key file or signed signature file.</li>
+<li><img src="../images/guard/gml.png" class="icon" />: .gml files, encrypted email message.</li>
+<li><img src="../images/guard/gpg.png" class="icon" />: .gpg files, encrypted and compressed File.</li>
 </ul>
 <p><b>Name Rules</b><br>
 <em>Public key has format: xx@xx_pubkey.asc.<br> Private key has format: xx@xx_privkey.asc.</em></p>
