--- a/en/iosfinder.html
+++ b/en/iosfinder.html
@@ -15,13 +15,7 @@
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <title>iOSFinder, review code on iPad anywhere.</title>
-<link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
-<style type="text/css">
-.extraimg { max-width: 480px; margin-left:0; }
-</style>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -39,8 +33,8 @@
         </p>
     </div>
  
-<img src="../images/editor/syn1.png" class="extraimg"><br><br>
-<img src="../images/editor/syn2.png" class="extraimg"><br><br>
+<img src="../images/editor/syn1.png" class="screenshots" style="max-width:480px;"><br><br>
+<img src="../images/editor/syn2.png" class="screenshots" style="max-width:480px;"><br><br>
 
 
 <h2>Why</h2>
@@ -95,7 +89,7 @@ So, this app developed to help you manage files in your iOS devices just like on
 
 
 <h2>FTP Server Settings</h2>
-<p><strong>1. On Macintosh:</strong> System Preferences → Sharing → File Sharing, check the service and got the IP address of your machine, then you can input it in the settings of iOSFinder.<br><br><a href="../images/editor/ftp.png" target="_blank"><img src="../images/editor/ftp.png" alt="" class="screenshots"/></a><br><br>
+<p><strong>1. On Macintosh:</strong> System Preferences → Sharing → File Sharing, check the service and got the IP address of your machine, then you can input it in the settings of iOSFinder.<br><br><a href="../images/editor/ftp.png" target="_blank"><img src="../images/editor/ftp.png" alt="" class="screenshots" style="max-width:480px;"/></a><br><br>
 <a href="uftp.html"><img src="../images/uftp/logo.png" alt="" style="width:32px;height:auto;vertical-align: -1ex;"/></a>Because macOS High Sierra removed the built-in FTP Server, there's an alternative solution: 
 <a href="http://www.sevenuc.com/en/uftp.html">Personal FTP Server</a>, use the uFTP Server, your FTP settings of iOSFinder should be changed to: <b>192.168.1.4:2121</b>, i.e. append a port number to the server IP address and sperate with <b>a colon ":"</b>, for the example, the port number is 2121, then the appending string is <span class="warning">":2121"</span>, five characters. 
 </p>
@@ -128,7 +122,7 @@ Fast file transfer between iOS device and Mac, Windows PC, Linux, Android phone 
 <p><a href="../images/editor/404.png" target="_blank"><img src="../images/editor/404.png" class="screenshots"></a></p>
 <p class="smallsection">Full featured multimedia player for iOS device. Transfer your music and movie from other platforms in your iOS devices and enjoy them later.</p>
 </div>
-<p><span class="note">New </span>&nbsp;&nbsp; The built-in music player in the last updated version supports lyrics synchronising, playlist management, cycle loop or random playback. The player can synchronise lyrics sheet with music files, this feature just requires to put the lyrics sheet that has a .lrc extension name together with the music file, i.e. the .mp3 file and the .lrc file both must be put under the same folder and has a same file name. <span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="smallicon" /></a></span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank">LyricsMaker</a> is a small utility that designed to help making lyrics sheet for music files very easy.</p>
+<p><span class="note">New </span>&nbsp;&nbsp; The built-in music player in the last updated version supports lyrics synchronising, playlist management, cycle loop or random playback. The player can synchronise lyrics sheet with music files, this feature just requires to put the lyrics sheet that has a .lrc extension name together with the music file, i.e. the .mp3 file and the .lrc file both must be put under the same folder and has a same file name. <span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="icon" /></a></span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank">LyricsMaker</a> is a small utility that designed to help making lyrics sheet for music files very easy.</p>
 <p><br></p>
 
 
