--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -15,10 +15,7 @@
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <title>LittleFox, the small karaoke video utility.</title>
-<link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -116,11 +113,11 @@ c. Run FFmpeg command directly on Terminal.app: <lt>ffmpeg -i /full/path/of/xxx.
 
 <h2>References</h2>
 <ol>
-<li><span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="smallicon" /></a></span>
+<li><span><a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank"><img src="../images/lyricsmaker/logo.png" class="icon" /></a></span>
 <a href="http://www.sevenuc.com/en/lyricsmaker.html" target="_blank">LyricsMaker</a>, a small utility designed to make lyrics sheet for audio or video and can pair working with LittleFox seamlessly.</li>
-<li><span><a href="http://www.sevenuc.com/en/uftp.html" target="_blank"><img src="../images/uftp/logo.png" class="smallicon" /></a></span>
+<li><span><a href="http://www.sevenuc.com/en/uftp.html" target="_blank"><img src="../images/uftp/logo.png" class="icon" /></a></span>
 <a href="http://www.sevenuc.com/en/uftp.html" target="_blank">Personal FTP Server</a>, a small utility developed to translate files between iOS device and Mac simple and easy.</li>
-<li><span><a href="https://www.audacityteam.org/" target="_blank"><img src="../images/littlefox/Audacity.png" class="smallicon" /></a></span>
+<li><span><a href="https://www.audacityteam.org/" target="_blank"><img src="../images/littlefox/Audacity.png" class="icon" /></a></span>
 <a href="https://www.audacityteam.org/" target="_blank">Audacity</a>, an excellent cross-platform audio editor that can help you manipulate and convert plenty of audio formats.</li>
 </ol>
 
