--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -15,10 +15,7 @@
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <title>LyricsMaker, make lyrics sheet for music so easy.</title>
-<link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -55,8 +52,8 @@ From May 2020, LyricsMaker turned to be a paid app, because thousands of people 
 
 <h2>Steps</h2>
 <ul>
-<li><b>Step 1:</b> Click <img src="../images/lyricsmaker/tex.png" class="button" /> button to open the plain text file for lyrics words, it will parse the file line by line automatically.</li>
-<li><b>Step 2:</b> Click <img src="../images/lyricsmaker/media.png" class="button" /> button to load the audio or video file and then click the <b>"Play"</b> button, when the playing of the audio or video at the point that you want to add a time mark for a segment of sentence, click the sentence in the right side box, the sentence will be automatically copied to the left side box with its time mark. Continue this process until the playing of the audio or video completed. </li>
+<li><b>Step 1:</b> Click <img src="../images/lyricsmaker/tex.png" class="icon" /> button to open the plain text file for lyrics words, it will parse the file line by line automatically.</li>
+<li><b>Step 2:</b> Click <img src="../images/lyricsmaker/media.png" class="icon" /> button to load the audio or video file and then click the <b>"Play"</b> button, when the playing of the audio or video at the point that you want to add a time mark for a segment of sentence, click the sentence in the right side box, the sentence will be automatically copied to the left side box with its time mark. Continue this process until the playing of the audio or video completed. </li>
 <li><b>Step 3:</b> After the playback of the audio or video file completed, check on the option <b>"Synchronising Lyrics"</b> and then click <b>"Play"</b> button, this time the app will playback the audio or video and display the generated lyrics sheet at the bottom of the black area. (of course, you can ignore this step and goto "Step 1" to start another audio or video.)</li>
 <li><b>Step 4:</b> When you satisfied with the result, open TextEdit and create a new plain text file, copy the content of the left side box into the file, save it as the final lyrics sheet.</li>
 </ul>
@@ -64,14 +61,14 @@ From May 2020, LyricsMaker turned to be a paid app, because thousands of people 
 <h2>Tips</h2>
 <ul>
 <li>At <b>Step 2</b>, you can slide the progress bar to an arbitrary position that you want seek the audio or video to there as a new start point.</li>
-<li>At <b>Step 2</b>, you can click <b>"Pause"</b> button to pause playing and input a very accurate time value to be a new start point of playing. click <img src="../images/lyricsmaker/knob.png" class="button" /> button and then input the time value to seek to the point that you want to set. <br>
+<li>At <b>Step 2</b>, you can click <b>"Pause"</b> button to pause playing and input a very accurate time value to be a new start point of playing. click <img src="../images/lyricsmaker/knob.png" class="icon" /> button and then input the time value to seek to the point that you want to set. <br>
 <b>Note:</b> the time value must has correct format, e.g: 01:40:43 or 40:43. (you can also copy the time mark from the left side box and paste it into the field.)</li>
 <li>At anytime, you can click <b>"Pause"</b> button to pause playing and edit the content of the left side box just like in TextEdit, and then continue until done. </li>
 <li>You can insert more blank lines into the raw lyrics words file to make it looks better before you process it.</li>
 </ul>
 
 <h2>Refrences</h2>
-<p><a href="littlefox.html"><img src="../images/littlefox/logo.png"  style="width: 40px;" /></a>
+<p><a href="littlefox.html"><img src="../images/littlefox/logo.png"  class="icon" /></a>
 <a href="littlefox.html">LittleFox</a>, the designedly small utility that used to synthesis subtitle with audio and video in a comfortable way.
 </p>
 
