--- a/en/speare.html
+++ b/en/speare.html
@@ -15,13 +15,7 @@
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Speare,IDE,Code Editor,Text Editor,Ruby Debugger,mruby Debugger,Lua Debugger,Python Debugger,PHP Debugger,Syntax Highlighting,Lex,Parser,Compiler,Interpreter,Programming Language,TextEdit,Vim,Emacs,Qt,GTK+,Tcl/Tk,TextMate,CotEditor,Textadept,Android Studio,ActiveState,Komodo,Xcode,Lazarus,ZeroBraneStudio,Visual Studio Code,Eclipse,Scrpting Language,Lua,Scheme,Python,Ruby,C,C++,SQL,Objective-C,Swift,Kotlin,Haxe,Haskell,TCL,Javascript,Lisp,Perl,PHP,GO,Markdown,Node">
 <title>Crafting code with Speare code editor</title>
-<link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
-<style type="text/css">
-w { color:#ffc8c8; font-weight: bold; }
-</style>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -29,7 +23,8 @@ w { color:#ffc8c8; font-weight: bold; }
 
     <div class="jumbotron">
         <img src="../images/speare/logo.png" style="width: 120px;" class="applogo"/>
-        <h1><i>Speare<br><em>version 1.2.404</em></i></h1>
+        <h1><i>Speare</i></h1>
+        <p><i><em>Version 1.2.404<br>(release date: Jul 11 2021)</em></i></p>
         <p class="greenbig"><i>The ultra light code editor.</i></p>
         <p class="lead"><i>
 <a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. It was originally developed to provide a native scripting language debugging environment that seamlessly integrated with C and C++. You can use it to edit source code files, programming and debugging. Speare designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</i></p>
@@ -38,7 +33,6 @@ w { color:#ffc8c8; font-weight: bold; }
 <h2 class="dark">What's new</h2>
 <p class="dark">1. Syntax highlighting files that has no extension name by recognising it's Shebang.<br>
 2. Parallel editing mode: fast editing arbitrary files in parallel text views, the most important feature.<br>
-(version 1.2.404, release date: Jul 11 2021)
 </p>
 
 <!--p class="greenbig">It's free!</p-->
@@ -118,7 +112,8 @@ E.g. iTerm2 is better than Terminal.app, the latter is only 8.3MB, but the forme
 <tr><td>5</td><td>Tcl/Tk</td><td>Rapid GUI app development kit</td><td>Lack low level native OS support features</td></tr>
 <tr><td>6</td><td>Java Swing</td><td>Rapid development, mature cross-platform GUI kit</td><td>Low performance with huge run-time</td></tr>
 <tr><td>7</td><td>C# + .NET</td><td>Fast implementing GUI app</td><td>Suitable for Windows but not suitable for macOS GUI app, Mono required (6.10 362.3MB!).</td></tr>
-<tr><td>8</td><td>Native Cocoa</td><td>Mature, reliable, high performance</td><td>Best frameworks to build macOS app</td></tr>
+<tr><td>8</td><td>JUCE</td><td>Cross-platform GUI kit, mature, high performance</td><td>Function constrained to build complex macOS GUI app</td></tr>
+<tr><td>9</td><td>Native Cocoa</td><td>Mature, reliable, high performance</td><td>Best frameworks to build macOS app</td></tr>
 </table>
 
 <p>Speare code editor was developing based on the native pure Cocoa frameworks with leveraging several C library results a very small footprint, high performance, small memory and storage runtime consuming, and ultra small distribution. Only 1.1MB executable!</p>
