--- a/en/mathHelfer.html
+++ b/en/mathHelfer.html
@@ -15,10 +15,7 @@
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <title>MathHelfer, an ultra lightweight word processor on macOS.</title>
-<link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -77,8 +74,8 @@
 
 <h2>LaTeX Formula Operations</h2>
 <p><b>1. Add LaTeX Formula</b><br>
-&nbsp;&nbsp;&nbsp;&nbsp; Click menu: <b>File</b> → <b>Show LaTex Panel</b>, input LaTeX math formula and then click <img src="../images/MathHelfer/draw.png" class="button" />.<br>
-&nbsp;&nbsp;&nbsp;&nbsp; <b>Note:</b> On the formula panel, you can click <img src="../images/MathHelfer/trash.png" class="button" /> to empty the input box.<br><br>
+&nbsp;&nbsp;&nbsp;&nbsp; Click menu: <b>File</b> → <b>Show LaTex Panel</b>, input LaTeX math formula and then click <img src="../images/MathHelfer/draw.png" class="icon" />.<br>
+&nbsp;&nbsp;&nbsp;&nbsp; <b>Note:</b> On the formula panel, you can click <img src="../images/MathHelfer/trash.png" class="icon" /> to empty the input box.<br><br>
 <b>2. Remove LaTeX Formula</b><br>
 &nbsp;&nbsp;&nbsp;&nbsp; Right click on the formula image and then select the <b>"Delete Image"</b> menu item.<br><br>
 <b>3. Save LaTeX Formula</b><br>
