--- a/en/sounler.html
+++ b/en/sounler.html
@@ -15,10 +15,7 @@
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="audio player,music player,chiptune,arcade game,video game music,NES,SNES,GBA,N64,PSX,PS2,PSP,XBOX,GAMECUBE,WII,NDS,3DS,DOS,SPC,NSF,PSF,VGM,XM,MSX,Nintendo Entertainment System,Super Nintendo Entertainment System,Famicom,Game Boy Advance,Sony PlayStation,Sony PlayStation 2,Sony PlayStation Portable,Sega Genesis, Sega Mega Drive, Sega Dreamcast,Microsoft XBOX,DOS,Amiga,Spectrum">
 <title>Sounler</title>
-<link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -69,7 +66,7 @@ FLAC →  MP3<br>
 
 <h2>Audio Meta Data Management</h2>
 <p>
-<a href="../images/sounler/4.png" target="_blank"><img src="../images/sounler/4.png" class="screenshots"/></a><br>
+<a href="../images/sounler/4.png" target="_blank"><img src="../images/sounler/4.png" class="screenshots" /></a><br>
 <b>Note:</b> You can use "Game" as "Movie" to manage large amount of movie musics, and change "Game Types" to "Movie Types".
 </p>
 
@@ -107,24 +104,26 @@ FLAC →  MP3<br>
 
 <h2>Screenshots:</h2>
 <div class="screenshots">
-<div class="row">
+<!--div class="row">
    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
+ 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="../images/sounler/1.png" alt="First slide">
+      <img class="d-block w-100" src="../images/sounler/1.png" alt="First slide" class="screenshots" />
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../images/sounler/2.png" alt="Second slide">
+      <img class="d-block w-100" src="../images/sounler/2.png" alt="Second slide" class="screenshots" />
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../images/sounler/3.png" alt="Third slide">
+      <img class="d-block w-100" src="../images/sounler/3.png" alt="Third slide" class="screenshots" />
     </div>
   </div>
+  
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -134,7 +133,12 @@ FLAC →  MP3<br>
     <span class="sr-only">Next</span>
   </a>
   </div>
-</div>
+</div-->
+<p>
+<a href="../images/sounler/1.png" target="_blank"><img src="../images/sounler/1.png" class="screenshots" /></a><br>
+<a href="../images/sounler/2.png" target="_blank"><img src="../images/sounler/2.png" class="screenshots" /></a><br>
+<a href="../images/sounler/3.png" target="_blank"><img src="../images/sounler/3.png" class="screenshots" /></a><br>
+</p>
 
 
 <p><br><br><br><br></p>
