--- a/en/screenshots.html
+++ b/en/screenshots.html
@@ -45,6 +45,7 @@ The ultra light code editor.
 <p>
 <a href="../images/speare/screenshots/c_in_speare.png" target="_blank"><img src="../images/speare/screenshots/c_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/symbol_index_in_speare.png" target="_blank"><img src="../images/speare/screenshots/symbol_index_in_speare.png" class="screenshots"/></a><br><br>
+<a href="../images/speare/screenshots/python_in_speare.png" target="_blank"><img src="../images/speare/screenshots/python_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/java_in_speare.png" target="_blank"><img src="../images/speare/screenshots/java_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/awk_in_speare.png" target="_blank"><img src="../images/speare/screenshots/awk_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/lua_in_speare.png" target="_blank"><img src="../images/speare/screenshots/lua_in_speare.png" class="screenshots"/></a><br><br>
