--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -81,6 +81,11 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
 <p><a href="../images/reviewer/cch3.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch3.png" class="screenshots"></a><p>
 </dir>
 
+<p><audio autoplay loop preload="none" id="myaudio">
+<source src="../audio/ripples.mp3" type="audio/mpeg" />
+<source src="../audio/ripples.ogg" type="audio/ogg">
+</audio></p>
+
 </div>
 <p>You can challenge this dead powerful game on Android phone, iPhone, iPad, or on Macintosh, Windows and Linux, anywhere you required to play on, I'm pleasured to packing it for you on any platform. Further more, I've collected tons of wonderful DOS game/arcade game so many years, if you're interesting in play them again, please email your request.</p>
 
