--- a/en/iq.html
+++ b/en/iq.html
@@ -67,6 +67,10 @@ download the funny app from App Store: <br><br><a class="appstore_download_link"
 <p><br><br></p>
 <p>If you can't open the link above, please launch App Store and found <lt>Mr.IQ</lt> by searching.</p>
 
+<p><audio autoplay loop preload="none" id="myaudio">
+<source src="../audio/ripples.mp3" type="audio/mpeg"/>
+<source src="../audio/ripples.ogg" type="audio/ogg"></audio></p>
+        
 <h2>Screenshots:</h2>
 <div class="screenshots">
 <div class="row">
