--- a/en/metalogic.html
+++ b/en/metalogic.html
@@ -65,6 +65,10 @@
 <li>Ultra lightweight.</li>
 </ul></p>
 
+<p><audio autoplay loop preload="none" id="myaudio">
+<source src="../audio/ripples.mp3" type="audio/mpeg"/>
+<source src="../audio/ripples.ogg" type="audio/ogg"></audio></p>
+        
 <h2>Screenshot</h2>
 <p><a href="../images/metalogic/1.png" target="_blank"><img src="../images/metalogic/1.png" class="screenshots"/></a><br><br>
 <a href="../images/metalogic/2.png" target="_blank"><img src="../images/metalogic/2.png" class="screenshots"/></a>
