--- a/en/screenshots.html
+++ b/en/screenshots.html
@@ -22,7 +22,7 @@
 <div class="container-fluid">
 
     <div class="jumbotron">
-        <p><pre>
+        <p><pre class="banner">
    ____
   / __/ __  ___ ___  ___ ___
   _\ \/ _ \/ -_) _ `/ __/ -_)
@@ -52,7 +52,10 @@ The ultra light code editor.
 <a href="../images/speare/screenshots/ruby_in_speare.png" target="_blank"><img src="../images/speare/screenshots/ruby_in_speare.png" class="screenshots"/></a><br><br>
 </p>
 
-<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="none" id="myaudio">
+<source src="../audio/ripples.mp3" type="audio/mpeg" />
+<source src="../audio/ripples.ogg" type="audio/ogg">
+</audio></p>
 
 <p><br><br><br><br></p>
 </div><!-- container-fluid -->
