--- a/en/ai.html
+++ b/en/ai.html
@@ -86,7 +86,7 @@ Options:
     <li><a href="https://en.wikipedia.org/wiki/Natural_language_understanding">Natural language understanding on Wikipedia</a>.</li>
     </ul></p>
     <p><br></p>
-    <p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p>
+    <p><audio autoplay loop preload="none"><source src="../audio/ripples.mp3" type="audio/mpeg" /></audio></p>
 
 
 <p><br><br></p>
