--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -42,7 +42,10 @@
 From May 2020, LyricsMaker turned to be a paid app, because thousands of people downloaded it but no one to rate it on App Store. Why? The developer spent so many time to craftily make a software but Why nobody willing to spent one second to make a click to respect other's work and appreciate other's work?  People get other's free service but even no thanks in their heart, why? It will return to be free again forever if somebody do some kind thing for it.
 <em>Sorry, from May 2020, LyricsMaker turned to be a paid app, it will return to be free again forever if somebody do some kind things for it.</em></p>
 
-
+<p><audio autoplay loop preload="none" id="myaudio">
+<source src="../audio/ripples.mp3" type="audio/mpeg"/>
+<source src="../audio/ripples.ogg" type="audio/ogg"></audio></p>
+        
 <h2>Screenshot</h2>
 <p>
 <a href="../images/lyricsmaker/screenshot.png" target="_blank"><img src="../images/lyricsmaker/screenshot.png" class="screenshots"/></a><br><br>
