--- a/en/sounler.html
+++ b/en/sounler.html
@@ -90,7 +90,10 @@ FLAC →  MP3<br>
 </ul>
 </p>
 
-
+<p><audio autoplay loop preload="none" id="myaudio">
+<source src="../audio/lemmings.mp3" type="audio/mpeg"/>
+<source src="../audio/lemmings.ogg" type="audio/ogg"></audio></p>
+        
 <h2>References:</h2>
 <p><ul>
 <li><a href="https://en.wikipedia.org/wiki/Nintendo_Entertainment_System">Nintendo Entertainment System</a></li>
