--- a/en/taihaa.html
+++ b/en/taihaa.html
@@ -85,7 +85,7 @@
 <h2>References</h2>
 <p><a href="tungsyu.html">Tungsyu</a>, the Calendar of Yangtze River.</p>
 
-<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="none"><source src="../audio/ripples.mp3" type="audio/mpeg" /></audio></p>
 <p><br><br></p>
 </div><!-- container-fluid -->
 
