--- a/en/apps.html
+++ b/en/apps.html
@@ -122,6 +122,9 @@
 
 </div><!-- row -->
 
+<p><audio autoplay loop preload="none" id="myaudio">
+<source src="../audio/ripples.mp3" type="audio/mpeg"/>
+<source src="../audio/ripples.ogg" type="audio/ogg"></audio></p>
 
 <hr><br><br>
 <h1>iOS Apps</h1>
