--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="container-fluid">
     
-<div><pre class="green">
+<div><pre class="banner">
    ____
   / __/ __  ___ ___  ___ ___
   _\ \/ _ \/ -_) _ `/ __/ -_)
